tests/snapshots/examples_fixtures/type_system__failing__69_hm_typed_let_infix_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify String with Int.

  --> examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx:9:18
  |
9 |     let y: Int = x + 1
  |                  ^^^^^
  |                  ----- expected String, found Int


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify matching '+' operands (Int+Int, Float+Float, or String+String) with String and Int.

  --> examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx:9:18
  |
9 |     let y: Int = x + 1
  |                  ^^^^^
  |                  ----- expected matching '+' operands (Int+Int, Float+Float, or String+String), found String and Int
  |                  ----- operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion

Found 2 errors.
== stdout ==
<not executed>
